
mailfilter 0.8.8 (under development)

  - Fix github issue #1: ability to verify SSL certificates
    https://github.com/nondeterministic/mailfilter/issues/1

  - New command line switch (-s) to skip SSL certification
    verification (e.g., for local mail server with self-signed
    certificate), which is disabled by default

  - Add timestamps to output (thanks @hhoffstaette)

mailfilter 0.8.7 (Sun 09 Aug 2020 09:56:55 AM CEST)

  - Fix for build error w/ bison 3.7:
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=966908

mailfilter 0.8.6 (Tue Oct 25 20:18:55 CEST 2016)

  - Rebuilt the tarball, using more up to date versions of flex and
    bison.  It seems that older versions generated incompatible code
    (thanks to Elimar Riesebieter for helping me isolate this
    problem!)

  - Some minor spelling mistakes fixed in mailfilter output (thanks to
    Elimar Riesebieter!)

mailfilter 0.8.5 (Tue Jul 26 18:22:15 CEST 2016)

  - Fix some compilation issues (thanks for Holger Hoffstaette
    and Felix Janda for the patches!).

mailfilter 0.8.4 (Fri Mar 25 18:44:55 CET 2016)

  - Fix compilation issues stemming from flex >= 2.6.0, which no
    longer uses pointers for yyin, but references it seems.

  - Minor other code fixes that relate to the above.

mailfilter 0.8.3 (Sat May 17 19:37:27 CEST 2014)

  - (Hopefully) fixed Debian Bug #716522: mailfilter crashes
    with invalid file name in rc file that cannot be expanded
    properly.

  - Fix build problems due to bison not supporting YYPARSE_PARAM
    any longer.

  - Minor fixes to allow compilation with recent GCC versions.

  - Due to popular demand: Added option -i to ignore invalid
    Message-ID time stamps.  (Using this option is a potential
    security risk, so do not use unless you know better!)

mailfilter 0.8.2 (Sat Aug 15 16:12:22 EST 2009)

  - Provide fix for APOP vulnerability (e.g., described in ticket
    #2846 on mutt mailing list)
